MERN-3-TIER-APP-k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: shashank20062000/mern-3tier-backend:latest   # <-- change
          imagePullPolicy: Always
          ports:
            - containerPort: 8333
