MERN-3-TIER-APP-k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: shashank20062000/mern-3tier-frontend:latest  # <-- change
          imagePullPolicy: Always
          ports:
            - containerPort: 5050
